--- a/app/views/students/_parent_fields.html.erb
+++ b/app/views/students/_parent_fields.html.erb
@@ -2,6 +2,10 @@
   <%= f.input :relation, collection: Parent::RelationShip::ALL %>
   <%= f.input :name %>
   <%= f.input :phone %>
+  <%= f.input :email %>
+  <%= f.input :qualification %>
+  <%= f.input :occupation %>
+  <%= f.input :income %>
 
   <div class="clearfix">
     <%= link_to_remove_association "Remove option", f, class: "pull-right red" %>
