--- a/app/assets/stylesheets/inspinia_overrides.css.scss
+++ b/app/assets/stylesheets/inspinia_overrides.css.scss
@@ -6,15 +6,7 @@
 }
 
 
-#logo .profile-image {
-  width: 200px;
-  img{
-    width: auto;
-    height: auto;
-  }
-}
-
-#logo .profile-info {
-  margin-left: 205px;
+.md-skin .ibox-content{
+  border-top-style: solid;
 }
 
