--- a/app/views/layouts/_topnavbar.html.erb
+++ b/app/views/layouts/_topnavbar.html.erb
@@ -17,7 +17,12 @@
 
     <ul class="nav navbar-top-links navbar-right">
 
-      <% if user_signed_in? %>        
+      <% if user_signed_in? %>
+        <li>
+          <span class="m-r-sm text-muted welcome-message">
+            Academic Year: <%= StudentYear.current_year %>
+          </span>
+        </li>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
             <%= current_user.name %><span class="caret"></span>
