--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -18,13 +18,13 @@
 <div class="row m-b-lg m-t-lg">
   <div class="col-md-6">
       <div class="profile-image">
-        <%= student_logo(@student) %>        
+        <%= student_logo(@student) %>
       </div>
       <div class="profile-info">
         <div class="">
           <div>
             <h2 class="no-margins">
-                Alex Smith
+              <%= @student.name %>
             </h2>
             <h4>A current <%= sy.academic_year %> class <%= sy.classroom %> student </h4>
 
