--- a/app/views/students/_student_years_fields.html.erb
+++ b/app/views/students/_student_years_fields.html.erb
@@ -11,4 +11,4 @@
 </div>
 
 
-<%= f.input :academic_year, collection: [Date.today.year - 1, Date.today.year], input_html: { class: 'chosen-select' } %>
+<%= f.input :academic_year, collection: academic_year_array, input_html: { class: 'chosen-select' } %>
