--- a/app/views/students/_list.html.erb
+++ b/app/views/students/_list.html.erb
@@ -9,6 +9,7 @@
           <tr>
             <th>Name</th>
             <th>Branch</th>
+            <th>Medium</th>
             <th>Class</th>
             <th>Section</th>
             <th>Rollnumber</th>
@@ -21,6 +22,7 @@
             <tr>
               <td><%= link_to(student.name, student) %></td>
               <td><%= current_student_year.branch %></td>
+              <td><%= current_student_year.medium %></td>
               <td><%= current_student_year.classroom %></td>
               <td><%= current_student_year.section %></td>
               <td><%= current_student_year.roll_number %></td>
