--- a/app/views/students/import.html.erb
+++ b/app/views/students/import.html.erb
@@ -23,6 +23,7 @@
       <li>Admission Date</li>
       <li>Admission Class</li>
       <li>Branch</li>
+      <li>Medium</li>
       <li>Class</li>
       <li>Section</li>
       <li>Roll Number</li>
