--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -48,7 +48,7 @@
         <%= render "hidden_filters" %>
         <div class="form-group">
           <%= f.button :submit, "Send SMS", class: "btn btn-primary"%>
-          <%= link_to("Cancel", students_path(), class: "btn btn-default") %>
+          <%= link_to("Cancel", root_path(), class: "btn btn-default") %>
         </div>
       <% end %>
     </div>
