--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
 <% @title = "Students" %>
-<% @page_action = {title: "New Student", url: new_student_path() } %>
+<% @page_action = {title: "New Admission", url: new_student_path() } %>
 
 <div class="ibox">
   <div class="ibox-content">
