--- a/app/views/students/import.html.erb
+++ b/app/views/students/import.html.erb
@@ -8,7 +8,7 @@
     <ul>
       <li>First Name</li>
       <li>Last Name</li>
-      <li>Aadhar number</li>
+      <li>Aadhar Number</li>
       <li>Phone</li>
       <li>Email</li>
       <li>Date Of Birth</li>
