--- a/app/views/students/import.html.erb
+++ b/app/views/students/import.html.erb
@@ -47,7 +47,7 @@
       <li>Gaurdian Occupation</li>
       <li>Gaurdian Income</li>
     </ul>
-      <p class="help-block">If a student with same  <strong>name and date of birth</strong> is supplied, that entry will be ignored </p>
+      <p class="help-block">If a student with same  <strong>name</strong> and <strong>date of birth</strong> is supplied, that entry will be ignored </p>
       <p class="help-block">Student entries <strong>must have</strong> First name, Date Of Birth and Gender as mandatory fields </p>
     </li>
     <hr/>
