--- a/app/assets/stylesheets/inspinia_overrides.css.scss
+++ b/app/assets/stylesheets/inspinia_overrides.css.scss
@@ -10,3 +10,13 @@
   border-top-style: solid;
 }
 
+.dl-horizontal {
+    dd {
+    margin-bottom: 10px;
+  }
+}
+
+.dl-horizontal.dl-left dt{
+  text-align: left;
+}
+
